# singletons

./: cabal.project  flake.nix
singletons/: singletons.cabal
singletons-base/: Setup.hs  singletons-base.cabal
singletons-base/src/Control/Applicative/: Singletons.hs
singletons-base/src/Control/Monad/: Singletons.hs
singletons-base/src/Control/Monad/Fail/: Singletons.hs
singletons-base/src/Control/Monad/Singletons/: Internal.hs
singletons-base/src/Control/Monad/Zip/: Singletons.hs
singletons-base/src/Data/Bool/: Singletons.hs
singletons-base/src/Data/Either/: Singletons.hs
singletons-base/src/Data/Eq/: Singletons.hs
singletons-base/src/Data/Foldable/: Singletons.hs
singletons-base/src/Data/Function/: Singletons.hs
singletons-base/src/Data/Functor/: Singletons.hs
singletons-base/src/Data/Functor/Compose/: Singletons.hs
singletons-base/src/Data/Functor/Const/: Singletons.hs
singletons-base/src/Data/Functor/Identity/: Singletons.hs
singletons-base/src/Data/Functor/Product/: Singletons.hs
singletons-base/src/Data/Functor/Sum/: Singletons.hs
singletons-base/src/Data/List/: Singletons.hs
singletons-base/src/Data/List/NonEmpty/: Singletons.hs
singletons-base/src/Data/List/Singletons/: Internal.hs
singletons-base/src/Data/List/Singletons/Internal/: Disambiguation.hs
singletons-base/src/Data/Maybe/: Singletons.hs
singletons-base/src/Data/Monoid/: Singletons.hs
singletons-base/src/Data/Ord/: Singletons.hs
singletons-base/src/Data/Ord/Singletons/: Disambiguation.hs
singletons-base/src/Data/Proxy/: Singletons.hs
singletons-base/src/Data/Semigroup/: Singletons.hs
singletons-base/src/Data/Semigroup/Singletons/Internal/: Classes.hs  Disambiguation.hs  Wrappers.hs
singletons-base/src/Data/Singletons/Base/: CustomStar.hs  Enum.hs  Instances.hs  PolyError.hs  SomeSing.hs  TH.hs  TypeError.hs  TypeRepTYPE.hs  Util.hs
singletons-base/src/Data/String/: Singletons.hs
singletons-base/src/Data/Traversable/: Singletons.hs
singletons-base/src/Data/Tuple/: Singletons.hs
singletons-base/src/Data/Void/: Singletons.hs
singletons-base/src/GHC/Base/: Singletons.hs
singletons-base/src/GHC/Num/: Singletons.hs
singletons-base/src/GHC/TypeLits/: Singletons.hs
singletons-base/src/GHC/TypeLits/Singletons/: Internal.hs
singletons-base/src/Prelude/: Singletons.hs
singletons-base/src/Text/Show/: Singletons.hs
singletons-th/: singletons-th.cabal
singletons-th/src/Data/Singletons/: TH.hs
singletons-th/src/Data/Singletons/TH/Single/: Defun.hs
