name:           singletons-th
version:        3.3
cabal-version:  1.24
synopsis:       A framework for generating singleton types
homepage:       http://www.github.com/goldfirere/singletons
category:       Dependent Types
author:         Richard Eisenberg <rae@cs.brynmawr.edu>, Jan Stolarek <jan.stolarek@p.lodz.pl>
maintainer:     Ryan Scott <ryan.gl.scott@gmail.com>
bug-reports:    https://github.com/goldfirere/singletons/issues
stability:      experimental
tested-with:    GHC == 9.8.3
extra-source-files: README.md, CHANGES.md
license:        BSD3
license-file:   LICENSE
build-type:     Simple
description:
    @singletons-th@ defines Template Haskell functionality that allows
    /promotion/ of term-level functions to type-level equivalents and
    /singling/ functions to dependently typed equivalents. This library was
    originally presented in /Dependently Typed Programming with Singletons/,
    published at the Haskell Symposium, 2012.
    (<https://richarde.dev/papers/2012/singletons/paper.pdf>)
    See also the paper published at Haskell Symposium, 2014, which describes
    how promotion works in greater detail:
    <https://richarde.dev/papers/2014/promotion/promotion.pdf>.
    .
    @singletons-th@ generates code that relies on bleeding-edge GHC language
    extensions. As such, @singletons-th@ only supports the latest major version
    of GHC (currently GHC 9.10). For more information,
    consult the @singletons@
    @<https://github.com/goldfirere/singletons/blob/master/README.md README>@.
    .
    You may also be interested in the following related libraries:
    .
    * The @singletons@ library is a small, foundational library that defines
      basic singleton-related types and definitions.
    .
    * The @singletons-base@ library uses @singletons-th@ to define promoted and
      singled functions from the @base@ library, including the "Prelude".

source-repository this
  type:     git
  location: https://github.com/initial-mockingbird/singletons.git
  subdir:   singletons-th
  tag:      v3.1.2

source-repository head
  type:     git
  location: https://github.com/initial-mockingbird/singletons.git
  subdir:   singletons-th
  branch:   master

library
  hs-source-dirs:     src
  build-depends:      base             >= 4.19 && < 4.20,
                      singletons       >= 3.0 && < 3.1
  default-language:   GHC2021
  exposed-modules:    Data.Singletons.TH
                      Data.Singletons.TH.SuppressUnusedWarnings

  other-modules:      

  -- singletons re-exports
  reexported-modules: Data.Singletons
                    , Data.Singletons.Decide
                    , Data.Singletons.ShowSing
                    , Data.Singletons.Sigma

  ghc-options: -no-hs-main -optl-mexec-model=reactor "-optl-Wl"
